--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,16 +1,14 @@
 @font-face {
-  font-family: 'Futura Light';
-  src: url("../fonts/Futura (Light).ttf"); }
+  font-family: 'Gill Light';
+  src: url("../fonts/GillSanLig.ttf"); }
 @font-face {
-  font-family: 'Harriet Regular';
-  src: url("../fonts/Harriet Display Regular.otf"); }
-@font-face {
-  font-family: 'Harriet Bold';
-  src: url("../fonts/Harriet Display Bold.otf"); }
+  font-family: 'Gill Bold';
+  src: url("../fonts/GillSanBol.ttf"); }
 html, body, header, main, .ng-scope {
   margin: 0 0 0 0;
   height: 100%;
-  width: 100%; }
+  width: 100%;
+  color: white; }
 
 h1, h2, h3, p, li, ul, ol {
   margin: 0 0 0 0;
@@ -49,7 +47,6 @@ h1, h2, h3, p, li, ul, ol {
     top: 515px;
     width: 370px;
     height: 325px;
-    margin-left: 20px;
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat; }
@@ -76,5 +73,28 @@ h1, h2, h3, p, li, ul, ol {
       width: 300px;
       height: 85px;
       background-image: url("../imgs/logos/plunket.png"); }
+
+.footer {
+  position: absolute;
+  top: 1040px;
+  height: 50px;
+  width: 100%;
+  font-family: 'Gill Light'; }
+  .footer__legal {
+    line-height: 50px;
+    display: inline-block;
+    margin: 0 0 0 40px; }
+  .footer__nzda-logo {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    position: absolute;
+    background-image: url("../imgs//logos/nzda.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    right: 20px;
+    height: 100%;
+    width: 100px; }
 
 /*# sourceMappingURL=style.css.map */
