--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -10,6 +10,10 @@
 	font-family: 'Gill Bold';
 	src: url('../fonts/GillSanBol.ttf'); 
 }
+@font-face {
+	font-family: 'Futura Light';
+	src: url('../fonts/Futura (Light).ttf'); 
+}
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////VARIABLES///////////////////////////////////////////////////////////////////////////////////////////
@@ -101,10 +105,25 @@ h1, h2, h3, p, li, ul, ol {
 		position: absolute;
 		top: 515px;
 		width: 370px;
-		height: 325px;
+		height: 300px;
 		background-size: contain;
 		background-position: center;
 		background-repeat: no-repeat;
+	}
+	&__info-text {
+		font-family: 'Futura Light';
+		position: absolute;
+		font-size: 1.3em;
+		top: 585px;
+		left: 415px;
+		width: 290px;
+		height: 150px;
+		h1 {
+			margin: 0 0 10px 0;
+		}
+		b {
+			font-family: 'Futura';
+		}
 	}
 }
 
@@ -138,16 +157,21 @@ h1, h2, h3, p, li, ul, ol {
 	top: 1040px;
 	height: 50px;
 	width: 100%;
-	font-family: 'Gill Light';
+	font-family: 'Futura Light';
 	&__legal {
+		font-size: 0.9em;
 		line-height: 50px;
 		display: inline-block;
 		margin: 0 0 0 40px;
+		span {
+			cursor: pointer;
+			margin: 0 30px 0 0;
+		}
 	}
 	&__nzda-logo {
 		@include center-vertical;
 		position: absolute;
-		background-image: url($img-path + '/logos/nzda.jpg');
+		background-image: url($img-path + '/logos/nzda.png');
 		background-size: contain;
 		background-repeat: no-repeat;
 		background-position: center;
@@ -157,7 +181,88 @@ h1, h2, h3, p, li, ul, ol {
 	}
 }
 
+.comp {
+	@include center-horizontal;
+	top: 860px;
+	width: 90%;
+	height: 95px;
+	::-webkit-input-placeholder {
+		opacity: 0.7;
+	   color: white;
+	}
+	:-moz-placeholder { /* Firefox 18- */
+		opacity: 0.7;
+	   color: white;  
+	}
 
+	::-moz-placeholder {  /* Firefox 19+ */
+		opacity: 0.7;
+	   color: white;  
+	}
+
+	:-ms-input-placeholder {  
+		opacity: 0.7;
+	   color: white;  
+	}
+	&__form {
+		height: 100%;
+		width: 460px;
+		float: right;
+		input {
+			font-size: 0.8em;
+			color: white;
+			outline: none;
+			padding: 0 0 0 7px;
+			box-sizing: border-box;
+			background-color: $light-green;
+			-webkit-appearance: none;
+			border: none;
+			border-radius: 4px;
+			height: 40px;
+		}
+		input[type="text"] {
+			width: calc(50% - 18px);
+			margin: 0 5px 0 5px;
+		}
+		input[type="email"] {
+			width: calc(100% - 20px);
+			margin: 15px 5px 0 5px;
+		}
+	}
+	&__upload {
+		position: absolute;
+		height: 100%;
+		border-radius: 4px;
+		width: 235px;
+		background-color: $light-green;
+		&:after {
+			content: "";
+			@include center;
+			height: 50%;
+			width: 1px;
+			background-color: white;
+		}
+	}
+	&__upload-button {
+		width: 50%;
+		height: 100%;
+		float: left;
+		background-image: url($img-path + 'icons/camera.png');
+		background-position: center;
+		background-size: 70%;
+		background-repeat: no-repeat;
+		cursor: pointer;
+		&--photo {
+			background-image: url($img-path + 'icons/camera.png');
+		}
+		&--video {
+			background-image: url($img-path + 'icons/video.png');
+		}
+		&:hover {
+			opacity: 0.6;
+		}
+	}
+}
 
 
 
