--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -21,7 +21,7 @@ h1, h2, h3, p, li, ul, ol {
   top: -70px;
   background-color: #0AA600;
   width: 810px;
-  height: 1110px;
+  height: 1200px;
   font-family: 'Open Sans Light'; }
 
 .main {
@@ -95,8 +95,9 @@ h1, h2, h3, p, li, ul, ol {
     background-position: center;
     background-repeat: no-repeat; }
     .header__logo--colgate {
+      top: 1095px;
       width: 430px;
-      height: 200px;
+      height: 135px;
       background-image: url("../imgs/logos/colgate.png"); }
     .header__logo--plunket {
       right: 0;
@@ -106,7 +107,7 @@ h1, h2, h3, p, li, ul, ol {
 
 .footer {
   position: absolute;
-  top: 1050px;
+  top: 1145px;
   height: 50px;
   width: 100%; }
   .footer__legal {
@@ -183,10 +184,10 @@ h1, h2, h3, p, li, ul, ol {
     height: 40px;
     border-radius: 4px;
     top: 110px;
-    cursor: pointer; }
+    cursor: pointer;
+    font-family: 'Open Sans Bold'; }
     .comp__submit:hover {
-      background-color: #7AC143;
-      color: white; }
+      opacity: 0.7; }
   .comp__upload {
     position: absolute;
     height: 100%;
